--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ code {
 body{
   background-color: black;
 }
-/*aqui los de la paz*/
+
 header{
   background-image: url(https://media.istockphoto.com/id/875654676/es/foto/bandera-de-humo-nacional-bolivia.jpg?s=170667a&w=0&k=20&c=CgnbTxdnWPZUUhPN4ZkwNIpJEPsxoht24cTkmXXNJTk=);
   background-repeat: no-repeat;
@@ -109,7 +109,177 @@ h3{
   border-radius: 40px;
   color: coral;
 }
+.cards{
+  padding-left: 70px;
+  padding-right: 70px;
+  border-color:solid 1px black;
+  margin: 50px;
+ 
+}
+.card-body>.card{
+  color: aliceblue !important;
+  background-color: rgb(29, 29, 29); 
+  border-radius: 50px;
+  padding: 4%;
+  margin: 2%;
+}
+.fila-redondeada {
+  border-radius: 100px;
+}
+.depar>h2{
+  color: antiquewhite;
+  
+}
+.creditos {
+  font-family: Arial, sans-serif;
+  text-align: center;
+  margin-top: 50px;
+  color: aliceblue;
+}
+.creditos p {
+  color: aliceblue;
+  margin-bottom: 5px;
+}
+.este{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: end;
+  
+}
+.este div{
+  padding: 2px;
+  padding-right: 10px;
+}
+.este button{
+  border: 0;
+  border-radius: 8px;
+  color: #fff;
+  display: flex;
+  font-size: 15px;
+  padding: 4px;
+  cursor: pointer;
+  transition: 0.5s;
+  
+}
+.este button span{
+  background-color: #111;
+  padding: 6px 14px;
+  border-radius: 6px;
+  transition: .3s;
+}
+.este button .linkEstilo{
+  background-color: #111;
+  border-radius: 6px;
+  transition: .3s;
+}
+.este button:hover span{
+  background-color: #fff;
+  color: #111;
+  
+}
+.este button:hover .linkEstilo{
+  background-color: #fff;
+  color: #111;
+  
+}
+.este button:active{
+  transform: scale(0.9);
+}
+.este2 {
+  border: 0;
+  border-radius: 8px;
+  color: #fff;
+  display: flex;
+  font-size: 15px;
+  padding: 4px;
+  cursor: pointer;
+  transition: 0.5s;
+  
+}
+.este2 span{
+  background-color: #111;
+  padding: 6px 14px;
+  border-radius: 6px;
+  transition: .3s;
+  width: 75px;
+}
+.este2 button:hover span Link{
+  background-color: #fff;
+  color: #111;
+  
+}
+.este2 button:active{
+  transform: scale(0.9);
+}
+.linkEstilo {
+  text-decoration: none; 
+  color: white;
+}
+.chems{
+  text-decoration: none; 
+  color: white;
+  justify-content: start;
+}
+.ccc2{
+  text-decoration: none;
+  color: inherit;
+  border: 1.5px solid transparent; 
+  animation: cambioBorde 2s infinite;
+  border-radius: 20px;
+  margin-left: 0px;
+  margin-right: 5px;
+}
+.ccc2:hover{
+  animation: none; 
+  border-color: white; 
+}
+.fondob{
+  background-color: #3b3939;
+  padding: 20px;
 
+}
+.fondob img{
+border-radius: 30px;
+  
+}
+.espaciadocards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between; 
+}
+@keyframes cambioBorde {
+  0% { border-color: red; } 
+  33% { border-color: rgb(238, 255, 0); } 
+  66% { border-color: green; } 
+  100% { border-color: red; } 
+}
+.ccc3{
+  text-decoration: none;
+  color: inherit;
+  border: 3px solid transparent; 
+  animation: cambioBorde2 2s infinite;
+  border-radius: 20px;
+  margin-left: 0px;
+  margin-right: 5px;
+  background-color: #111;
+  color: white;
+}
+.ccc3:hover{
+  animation: none; 
+  border-color: rgb(0, 0, 0); 
+  background-color: rgb(63, 62, 62);
+  color: rgb(253, 251, 251);
+}
+@keyframes cambioBorde2 {
+  0% { border-color: red; } 
+  33% { border-color: rgb(238, 255, 0); } 
+  66% { border-color: green; } 
+  100% { border-color: rgb(39, 3, 245); } 
+}
+.listas ul{
+  padding: 10px;
+}
 @media (max-width: 576px) {
   .parflex {
       padding-top: 40px;
@@ -154,4 +324,21 @@ h3{
       font-size: 20px;
   }
 
+}
+@media (min-width: 676px) {
+  .espaciadocards > div {
+      width: calc(50% - 10px);
+     
+      margin-bottom: 20px;
+
+  }
+}
+
+
+@media (min-width: 868px) {
+  .espaciadocards > div {
+      width: calc(33.333% - 10px); 
+      height: 10%; 
+      margin-bottom: 20px; 
+  }
 }
